--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.1",
+    "@astrojs/netlify": "^5.5.0",
     "@astrojs/react": "^3.6.1",
     "@astrojs/tailwind": "^5.1.0",
     "@sanity/astro": "^3.1.4",
@@ -23,6 +24,7 @@
     "astro-portabletext": "^0.10.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "refractor": "^4.8.1",
     "sanity": "^3.53.0",
     "tailwindcss": "^3.4.7",
     "typescript": "^5.5.4"
